--- a/views/news/detail.html
+++ b/views/news/detail.html
@@ -7,7 +7,7 @@
 <div class="detail_con fl">
     <h3>{{ newsData.title }}</h3>
     <div class="detail_about clearfix">
-        <span class="time_souce fl">{{ newsData.create_time | dateFormat }} 来源: {{newsData.source }}</span>
+        <span class="time_souce fl">{{ newsData.create_time | dateFormat }} 来源: {{ newsData.source }}</span>
         <span class="comment fr">{{ newsData.clicks }}</span>
     </div>
 
@@ -17,15 +17,15 @@
 
     {{@newsData.content}}
             
-    <a href="javascript:;" class="collection block-center" data-newid="" >收藏</a>
-    <a href="javascript:;" class="collected block-center" data-newid="" style="display: none"><span class="out">已收藏</span><span class="over">取消收藏</span></a>
+    <a href="javascript:;" class="collection block-center" data-newid="{{ newsData.id }}" style="display: {{ isCollected ? 'none' : 'block' }}">收藏</a>
+    <a href="javascript:;" class="collected block-center" data-newid="{{ newsData.id }}" style="display: {{ isCollected ? 'block' : 'none' }}"><span class="out">已收藏</span><span class="over">取消收藏</span></a>
     
     {{ if !user_info }}
     <div class="comment_form_logout">
         登录发表你的评论
     </div>
     {{ else }}
-    <form action="" class="comment_form">
+    <form action="" class="comment_form" data-newsid="{{ newsData.id }}">
         <div class="person_pic">
             <img src="/news/images/worm.jpg" alt="用户图标">
         </div>
@@ -39,7 +39,32 @@
     </div>
     
     <div class="comment_list_con">
-        <div class="comment_list">
+        {{ each commentList }}
+            <div class="comment_list">
+                <div class="person_pic fl">
+                    <img src="{{ user_info.avatar_url }}" alt="用户图标">
+                </div>
+                <div class="user_name fl">{{ user_info.nick_name }}</div>
+                <div class="comment_text fl">{{ $value.content }}</div>
+                {{ if $value.parent_id }}
+                    <div class="reply_text_con fl">
+                        <div class="user_name2">{{ $value.parent.user.nick_name }}</div>
+                        <div class="reply_text">
+                            {{ $value.parent.content }}
+                        </div>
+                    </div>
+                {{ /if }}
+                <div class="comment_time fl">{{ $value.create_time | dateFormat }}</div>
+                <a href="javascript:;" class="comment_up fr" data-commentid="{{ $value.id }}" data-newsid="{{ $value.news_id }}">赞</a>
+                <a href="javascript:;" class="comment_reply fr">回复</a>
+                <form class="reply_form fl" data-commentid="{{ $value.id }}" data-newsid="{{ $value.news_id }}">
+                    <textarea class="reply_input"></textarea>
+                    <input type="button" value="回复" class="reply_sub fr">
+                    <input type="reset" name="" value="取消" class="reply_cancel fr">
+                </form>
+            </div>
+        {{ /each }}
+        <!-- <div class="comment_list">
             <div class="person_pic fl">
                 <img src="/news/images/worm.jpg" alt="用户图标">
             </div>    
@@ -115,7 +140,7 @@
                 <input type="submit" name="" value="回复" class="reply_sub fr">
                 <input type="reset" name="" value="取消" class="reply_cancel fr">
             </from>            
-        </div>
+        </div> -->
     </div>
             
             
