--- a/views/news/base.html
+++ b/views/news/base.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header_con">
         <div class="header">
-            <a href="#" class="logo fl"><img src="/news/images/logo.png" alt="logo"></a>
+            <a href="/" class="logo fl"><img src="/news/images/logo.png" alt="logo"></a>
             {{block "menuBlock"}}{{/block}}
             {{if !user_info}}
             <div class="user_btns fr">
