--- a/views/news/user.html
+++ b/views/news/user.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="header_con">
 		<div class="header">
-			<a href="#" class="logo fl"><img src="../images/logo.png" alt="logo"></a>
+			<a href="/" class="logo fl"><img src="../images/logo.png" alt="logo"></a>
 			<div class="user_login fr" style="display: block;">
 				<img src="../images/user_pic.png" class="lgin_pic">
 				<a href="#">用户张山</a>
