--- a/views/news/detail.html
+++ b/views/news/detail.html
@@ -148,12 +148,12 @@
 {{/block}}
 {{block "authorCardBlock"}}
 <div class="author_card">
-    <a href="#" class="author_pic"><img src="/news/images/user_pic.png" alt="author_pic"></a>
-    <a href="#" class="author_name">张大山</a>
-    <div class="author_resume">张大山的简介,张大山</div>
-    <div class="writings"><span>总篇数</span><b>23</b></div>
-    <div class="follows"><span>粉丝</span><b>36</b></div>
-    <a href="javascript:;" class="focus fr">关注</a>
-    <a href="javascript:;" class="focused fr"><span class="out">已关注</span><span class="over">取消关注</span></a>
+    <a href="#" class="author_pic"><img src="{{authorInfo.avatar_url?authorInfo.avatar_url:'/news/images/user_pic.png'}}" alt="author_pic"></a>
+    <a href="#" class="author_name">{{authorInfo.nick_name}}</a>
+    <div class="author_resume">{{authorInfo.signature}}</div>
+    <div class="writings"><span>总篇数</span><b>{{authorNewsCount}}</b></div>
+    <div class="follows"><span>粉丝</span><b>{{authorFansCount}}</b></div>
+    <a href="javascript:;" class="focus fr" style="display: {{isFollow?'none':'block'}}" data-userid={{authorInfo.id}}>关注</a>
+    <a href="javascript:;" class="focused fr" style="display: {{isFollow?'block':'none'}}" data-userid={{authorInfo.id}}><span class="out">已关注</span><span class="over">取消关注</span></a>
 </div> 
 {{/block}}
